--- a/build.gradle
+++ b/build.gradle
@@ -15,4 +15,5 @@ dependencies {
   testCompile group: 'junit', name: 'junit', version: '4+'
   compile group: 'org.sql2o', name: 'sql2o', version: '1.5.4+'
   compile group: 'mysql', name: 'mysql-connector-java', version: '6.0.6+'
+  compile group: 'commons-validator', name: 'commons-validator', version: '1.6+'
 }
