--- a/.gitignore
+++ b/.gitignore
@@ -41,3 +41,6 @@ gradle-app.setting
 # gradle/wrapper/gradle-wrapper.properties
 
 # End of https://www.gitignore.io/api/java,gradle
+
+# Vim swp files
+*.swp
