--- a/build.gradle
+++ b/build.gradle
@@ -10,8 +10,8 @@ repositories {
 }
 
 dependencies {
-  // compile group: 'com.sparkjava', name: 'spark-core', version: '2.3+'
-  // compile group: 'org.apache.velocity', name: 'velocity', version: '1.7+'
+  compile group: 'com.sparkjava', name: 'spark-core', version: '2.3+'
+  compile group: 'org.apache.velocity', name: 'velocity', version: '1.7+'
   testCompile group: 'junit', name: 'junit', version: '4+'
   compile group: 'org.sql2o', name: 'sql2o', version: '1.5.4+'
   compile group: 'mysql', name: 'mysql-connector-java', version: '6.0.6+'
