--- a/build.gradle
+++ b/build.gradle
@@ -16,4 +16,6 @@ dependencies {
   compile group: 'org.sql2o', name: 'sql2o', version: '1.5.4+'
   compile group: 'mysql', name: 'mysql-connector-java', version: '6.0.6+'
   compile group: 'commons-validator', name: 'commons-validator', version: '1.6+'
+  // https://mvnrepository.com/artifact/commons-lang/commons-lang
+  compile group: 'commons-lang', name: 'commons-lang', version: '2.6+'
 }
